// ExplainMyBody Database Schema (SQLAlchemy + pgvector)
// Copy and paste this code into https://dbdiagram.io/

Project ExplainMyBody {
  database_type: 'PostgreSQL'
  Note: '''
    # ExplainMyBody LLM System
    - InBody 분석 파이프라인
    - 주간 운동/식단 계획 생성
    - Vector RAG (pgvector)
    - 이중 임베딩 시스템 (OpenAI 1536D + Ollama bge-m3 1024D)
  '''
}

// ========================================
// 테이블 정의
// ========================================

Table users as U {
  id integer [pk, increment, note: 'Primary Key']
  username varchar(100) [unique, not null, note: '사용자명']
  email varchar(255) [unique, not null, note: '이메일']
  hashed_password varchar(255) [null, note: '비밀번호 해시 (선택)']
  created_at timestamp [default: `now()`, note: '생성일시']

  Note: '사용자 기본 정보'
}

Table health_records as HR {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  record_date timestamp [default: `now()`, note: '측정일시']
  measurements jsonb [not null, note: 'InBody 측정 데이터 (JSONB)']
  source varchar(50) [default: 'manual', note: '데이터 소스 (manual, inbody_ocr)']

  Indexes {
    user_id
    (user_id, record_date) [name: 'idx_health_records_user_date']
  }

  Note: '''
    InBody 측정 데이터 저장
    - measurements 구조:
      * 기본: weight, height, BMI, body_fat_percent, skeletal_muscle_mass
      * 규칙기반 분석: body_type1 (stage2), body_type2 (stage3)
      * 부위별: left_arm, right_arm, trunk, left_leg, right_leg (각각 muscle_mass, fat_mass)
  '''
}

Table inbody_analysis_reports as IAR {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  record_id integer [not null, ref: > HR.id, note: 'InBody 측정 ID (FK)']
  report_date timestamp [default: `now()`, note: '분석일시']
  llm_output text [not null, note: 'LLM 생성 분석 텍스트']
  model_version varchar(100) [note: 'LLM 모델 (gpt-4o-mini, claude-3-5-sonnet, exaone3.5)']
  embedding_1536 vector(1536) [note: 'OpenAI text-embedding-3-small (1536차원)']
  embedding_1024 vector(1024) [note: 'Ollama bge-m3 임베딩 (1024차원)']

  Indexes {
    user_id
    record_id
    embedding_1536 [type: hnsw, name: 'idx_inbody_analysis_reports_embedding_1536_hnsw', note: 'HNSW: m=16, ef_construction=64']
    embedding_1024 [type: hnsw, name: 'idx_inbody_analysis_reports_embedding_1024_hnsw', note: 'HNSW: m=16, ef_construction=64']
  }

  Note: '''
    LLM 분석 리포트 + Vector Embeddings
    - 이중 임베딩 저장으로 모델별 RAG 지원
    - Vector RAG: cosine similarity + 시간 가중치 reranking
    - Reranking: 0.7 * similarity + 0.3 * time_decay
    - Time decay: 1 / (1 + ln(days_ago + 1))
    - HNSW 인덱스로 빠른 유사도 검색 (top_k * 2 → rerank → top_k)
  '''
}

Table user_details as UD {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  goal_data jsonb [null, note: '목표 데이터 (JSONB)']
  preferences jsonb [null, note: '선호도 데이터 (JSONB)']
  health_specifics jsonb [null, note: '건강 특이사항 (JSONB)']
  created_at timestamp [default: `now()`, note: '생성일시']
  is_active integer [default: 1, note: '활성화 여부 (1=활성, 0=비활성)']

  Indexes {
    user_id
    (user_id, is_active)
  }

  Note: '''
    사용자 상세 정보 (목표, 선호도, 건강 특이사항)

    goal_data 구조:
    - goal_type: 체중감량, 근육증가, 체력향상, 건강유지
    - target_weight, target_body_fat, target_muscle
    - deadline, priority

    preferences 구조:
    - preferred_exercise_types: [웨이트, 유산소, 필라테스]
    - exercise_frequency, exercise_duration, exercise_intensity
    - dietary_restrictions, preferred_cuisine, disliked_foods
    - meal_frequency

    health_specifics 구조:
    - health_conditions: [당뇨, 고혈압, 관절염]
    - injuries: [허리 디스크, 무릎 연골]
    - medications: [복용 중인 약물]
  '''
}

Table weekly_plans as WP {
  id integer [pk, increment, note: 'Primary Key']
  user_id integer [not null, ref: > U.id, note: '사용자 ID (FK)']
  week_number integer [not null, note: '주차']
  start_date date [not null, note: '시작일']
  end_date date [not null, note: '종료일']
  plan_data jsonb [not null, note: '주간 계획 데이터 (JSONB)']
  model_version varchar(100) [note: 'LLM 모델']
  created_at timestamp [default: `now()`, note: '생성일시']

  Indexes {
    user_id
    (user_id, start_date)
    (user_id, week_number)
  }

  Note: '''
    주간 운동/식단 계획

    plan_data 구조 (7일간):
    - daily_plans: [
        {
          day: "Monday",
          exercise: {type, duration, intensity, specific_exercises},
          diet: {breakfast, lunch, dinner, snack},
          calories: {target, breakdown},
          tips: [실용적 조언]
        }
      ]

    생성 과정:
    1. Vector RAG로 InBody 분석 검색 (top_k=6, reranking)
    2. 사용자 목표/선호도 결합
    3. LLM으로 개인화된 주간 계획 생성
  '''
}

// ========================================
// 관계 (Relationships)
// ========================================

Ref: HR.user_id > U.id [delete: cascade]
Ref: IAR.user_id > U.id [delete: cascade]
Ref: IAR.record_id > HR.id [delete: cascade]
Ref: UD.user_id > U.id [delete: cascade]
Ref: WP.user_id > U.id [delete: cascade]

// ========================================
// 테이블 그룹 (Visual Grouping)
// ========================================

TableGroup "사용자 관리" {
  users
  user_details
}

TableGroup "InBody 분석 파이프라인" {
  health_records
  inbody_analysis_reports
}

TableGroup "주간 계획 생성" {
  weekly_plans
}

// ========================================
// 워크플로우 및 기술 스택
// ========================================

Note workflow {
  '''
  ## 파이프라인 1: InBody 분석

  ```bash
  uv run python pipeline_inbody_analysis/main.py \
    --user-id 2 \
    --measurements-file sample_inbody_data.json \
    --model exaone3.5:7.8b \
    --enable-embedding
  ```

  1. InBody OCR 데이터 입력
  2. 규칙 기반 stage2/stage3 계산 (rule_based_bodytype/)
  3. health_records에 저장
  4. LLM으로 상세 분석 생성
  5. inbody_analysis_reports에 저장
  6. 이중 임베딩 생성:
     - OpenAI text-embedding-3-small (1536D)
     - Ollama bge-m3 (1024D)

  ---

  ## 파이프라인 2: 주간 계획 생성

  ```bash
  uv run python pipeline_weekly_plan/main.py \
    --user-id 1 \
    --goals goals.json \
    --preferences prefs.json \
    --week-number 1 \
    --start-date 2025-01-27 \
    --model gpt-4o-mini \
    --use-ollama-rag
  ```

  1. Vector RAG로 InBody 분석 검색
     - top_k=6 (후보: top_k * 2 = 12개 먼저 검색)
     - 임베딩 차원 자동 선택 (use_ollama → 1024D, 아니면 1536D)
  2. Reranking 수행
     - Similarity (70%) + Time weight (30%)
     - Time decay: 1 / (1 + ln(days_ago + 1))
  3. 사용자 목표/선호도 결합
  4. LLM으로 주간 계획 생성
  5. weekly_plans에 저장

  ---

  ## 기술 스택

  **Database:**
  - PostgreSQL + pgvector extension
  - SQLAlchemy 2.0+ ORM
  - Docker (port 5433)

  **Vector Search:**
  - OpenAI text-embedding-3-small (1536D)
  - Ollama bge-m3 (1024D)
  - HNSW 인덱스 (m=16, ef_construction=64)
  - Cosine similarity metric

  **LLM Models:**
  - OpenAI: gpt-4o-mini, gpt-4o
  - Anthropic: claude-3-5-sonnet-20241022
  - Ollama: exaone3.5:7.8b, qwen2.5:7b

  **Python Stack:**
  - Python 3.11+
  - Pydantic v2 (data validation)
  - uv (package manager)
  - python-dotenv (env management)

  ---

  ## 데이터베이스 초기화

  ```bash
  # PostgreSQL with pgvector (Docker)
  docker run -d \
    --name explainmybody-postgres \
    -e POSTGRES_USER=postgres \
    -e POSTGRES_PASSWORD=postgres \
    -e POSTGRES_DB=explainmybody \
    -p 5433:5432 \
    pgvector/pgvector:pg16

  # Migration
  uv run python migrate_to_sqlalchemy.py
  ```

  ---

  ## 환경 변수 (.env)

  ```bash
  DATABASE_URL=postgresql://postgres:postgres@localhost:5433/explainmybody
  ANTHROPIC_API_KEY=sk-ant-...
  OPENAI_API_KEY=sk-...
  OLLAMA_BASE_URL=http://localhost:11434
  ```
  '''
}

Note database_methods {
  '''
  ## Database 클래스 주요 메서드 (shared/database.py)

  **User 관련:**
  - create_user(username, email, hashed_password)
  - get_user_by_id(user_id)
  - get_user_by_email(email)
  - update_user_password(user_id, hashed_password)

  **Health Records:**
  - save_health_record(user_id, measurements, source, measured_at)
  - get_health_record(record_id)
  - get_user_health_records(user_id, limit=10)
  - search_health_records_by_measurement(user_id, key, value)

  **Analysis Reports:**
  - save_analysis_report(user_id, record_id, llm_output, model_version, embedding_1536, embedding_1024)
  - update_analysis_embedding(report_id, embedding_1536, embedding_1024)
  - get_analysis_report(report_id)
  - get_report_by_record_id(record_id)
  - get_user_analysis_reports(user_id, limit=10)
  - search_similar_analyses(user_id, query_embedding, top_k=6, embedding_dim=1536, rerank=True)

  **User Details:**
  - create_user_detail(user_id, goal_data, preferences, health_specifics)
  - get_user_details(user_id, active_only=True)

  **Weekly Plans:**
  - save_weekly_plan(user_id, week_number, start_date, end_date, plan_data, model_version)
  - get_weekly_plan(plan_id)
  - get_user_weekly_plans(user_id, limit=10)

  **Utilities:**
  - test_connection()
  - get_user_statistics(user_id)
  '''
}
